[package]
edition = '2018'
name = 'ever-crypto'
version = '0.1.62'

[dependencies]
aes-ctr = '0.6.0'
async-trait = '0.1.22'
base64 = '0.13'
curve25519-dalek = '3.2'
ed25519 = '1.0'
ed25519-dalek = '1.0'
failure = '0.1.6'
rand = '0.7'
serde_json = '1.0.41'
sha2 = '0.9'
x25519-dalek = '1.2'
serde = { features = [ 'derive', 'rc' ], version = '1.0.105' }
tokio = { features = [ 'rt-multi-thread' ], version = '1.5' }
ton_api = { git = 'https://github.com/tonlabs/ton-labs-tl.git', package = 'ton_api', tag = '0.2.150' }
ton_types = { git = 'https://github.com/tonlabs/ton-labs-types.git', tag = '1.11.11' }

[features]
default = [  ]
export_key = [  ]

